--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
     "@emotion/react": "^11.11.4",
+    "@faker-js/faker": "^6.6.6",
     "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^6.0.21",
     "@mantine/dates": "^6.0.21",
@@ -82,6 +86,8 @@
     "postcss": "^8",
     "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.2",
     "typescript": "^5"
   }
 }
