--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "export-to-csv": "^1.2.4",
+    "framer-motion": "^11.0.28",
     "lodash": "^4.17.21",
     "lucide-react": "^0.364.0",
     "mantine-react-table": "^1.3.4",
@@ -67,6 +68,7 @@
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-number-format": "^5.3.4",
+    "react-spinners": "^0.13.8",
     "recharts": "^2.12.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
