--- a/package.json
+++ b/package.json
@@ -60,11 +60,11 @@
     "lucide-react": "^0.364.0",
     "mantine-react-table": "^1.3.4",
     "moment": "^2.30.1",
-    "next": "14.1.4",
+    "next": "^14.2.1",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-number-format": "^5.3.4",
@@ -84,7 +84,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "^14.2.1",
     "postcss": "^8",
     "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
